--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -29,7 +29,7 @@ html {
   color: white;
   text-align: center;
   padding: 0 20px;
-  background: url("https://plus.unsplash.com/premium_photo-1685977494926-d1f8efd44c3c?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1176")
+  background: url("https://images.pexels.com/photos/4737484/pexels-photo-4737484.jpeg")
     no-repeat center center fixed;
   background-size: cover;
   overflow: hidden;
